# Watchdog-Stream-Server

./: .gitignore  INSTALL.md  README.md  app.py  client.js  events.py  install.sh  manager.py  pyproject.toml  requirements.txt  rtc.bat  rtc.sh  run.bat  safe_dictionary.py  serve.py  server.sh  stack.yml  stream_server.conf  stream_server.service  test.bat
NewServer/: app.py  manager.py  safe_dictionary.py  serve.py
NewServer/stream-server-client/: package.json
NewServer/stream-server-client/src/: index.js
NewServer/stream-server-client/src/app-redux/: actionTypes.js  constants.js  rtcClient.js  selectors.js  socketManager.js  store.js
NewServer/stream_server_producer/: __main__.py  rtc_producer.py
Original/: webcam.py
stream-server-client/: package-lock.json
stream-server-client/src/: App.js  index.js
stream-server-client/src/app-redux/: actions.js  constants.js  defaultState.json  reducer.js  rtcClient.js  rtcStreamer.js  store.js
stream_server/: __init__.py  __main__.py
stream_server/app/: __init__.py  app.py
stream_server/app/main/: __init__.py  client.py  events.py  manager.py
stream_server/client/: __main__.py  rtc_user.py  user.py
stream_server/secure/: __main__.py  pki_helpers.py
stream_server/tests/: test_server.py
stream_server/tests/stream_user/: __main__.py  user.py
stream_server/user/: __main__.py  connection.py  user.py
stream_server_producer/: __main__.py  rtc_producer.py  rtc_producer_new.py
stream_user/: __main__.py  user.py
stream_user/browser/: app.js  client.js  index.html  package-lock.json
(+1 files in other folders)
