[tool.poetry]
name = "stream-server"
version = "0.1.0"
description = ""
authors = ["Jordan Manas <u17080534@tuks.co.za>"]

[tool.poetry.dependencies]
python = "^3.6"
python-socketio = "^4.6.0"
eventlet = "^0.25.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
